--- a/package/firmware/ath11k-firmware/Makefile
+++ b/package/firmware/ath11k-firmware/Makefile
@@ -8,9 +8,9 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ath11k-firmware
-PKG_SOURCE_DATE:=2021-07-20
+PKG_SOURCE_DATE:=210d1a7242c6eaeec180e8bb87e805653bb6d35a
 PKG_SOURCE_VERSION:=d4003c1921810adcc455d46f17776a3392b29436
-PKG_MIRROR_HASH:=6839081bafbc56d3b8e41d30790b20813c349cbc1732e887347ef5ed3ea717e4
+PKG_MIRROR_HASH:=888da6f5425d90379da2e07d7bfeda288c07f0d14ed165ceb7af94d98e7790c5
 PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
