--- a/package/firmware/ath11k-firmware/Makefile
+++ b/package/firmware/ath11k-firmware/Makefile
@@ -8,9 +8,9 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ath11k-firmware
-PKG_SOURCE_DATE:=210d1a7242c6eaeec180e8bb87e805653bb6d35a
-PKG_SOURCE_VERSION:=d4003c1921810adcc455d46f17776a3392b29436
-PKG_MIRROR_HASH:=888da6f5425d90379da2e07d7bfeda288c07f0d14ed165ceb7af94d98e7790c5
+PKG_SOURCE_DATE:=2023-03-31
+PKG_SOURCE_VERSION:=a039049a9349722fa5c74185452ab04644a0d351
+PKG_MIRROR_HASH:=ed401e3f6e91d70565b3396139193f7e815f410db93700697205ac8ed1b828c5
 PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
